plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.2'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'muse-kopis'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'

	implementation 'com.auth0:java-jwt:4.4.0'
	implementation 'org.mindrot:jbcrypt:0.4'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
	implementation 'org.springframework.boot:spring-boot-starter-webflux:3.1.0'
	implementation 'org.apache.commons:commons-text:1.10.0'
	implementation 'io.netty:netty-resolver-dns-native-macos:4.1.72.Final'
	implementation 'io.netty:netty-resolver-dns-native-macos:4.1.68.Final:osx-aarch_64'
	// JAXB API
	implementation 'javax.xml.bind:jaxb-api:2.3.1'
	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.15.0'
//	 JAXB Runtime (for marshalling and unmarshalling)
	implementation 'com.sun.xml.bind:jaxb-core:2.3.0.1'
	implementation 'com.sun.xml.bind:jaxb-impl:2.3.3'

	// Spring Context Support (for XML processing)
	implementation 'org.springframework:spring-context-support:5.3.23'
//	runtimeOnly 'com.h2database:h2'
	runtimeOnly 'mysql:mysql-connector-java:8.0.32'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
